<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.smartchef.ConfigActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/choose_recipe"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/nutella_pie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutella_pie"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/brownies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brownies"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/yellow_cake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow_cake"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/cheesecake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheesecake"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:id="@+id/widgetStartButton"/>

</LinearLayout>